--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -1,10 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+          integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+          crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+          integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+          crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="file:///C:/Users/kms/Desktop/giant_front/static/style.css">
+
+
+  <!-- icon -->
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+
+
+  <!-- font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
-$END$
+
+<section class="w-100 vh-100">
+  <div class="col-lg-6 mx-auto bg-white vh-100 p-4">
+    <br>
+    <h3 class="text-center pt-5">로그인</h3>
+    <br><br>
+    <form action="" method="POST">
+      <div class="w-100 py-2">
+        <label for="username">ID</label>
+        <input class="form-control" type="email" id="username" name="username">
+      </div>
+      <div class="w-100 py-2">
+        <label for="username">Password</label>
+        <input class="form-control" type="password" id="password" name="password">
+      </div>
+      <div class="w-100 py-3">
+        <button type="submit" class="btn btn-primary w-100" onclick="login()">
+          <span>로그인</span>
+        </button>
+      </div>
+    </form>
+    <br>
+    <span>아직 <b>GIANTS</b>의 회원이 아니신가요?</span>
+    <button class="btn btn-outline-primary w-100"><span>회원가입</span></button>
+
+  </div>
+</section>
+
+<script>
+  function login() {
+    alert('로그인');
+  }
+</script>
 </body>
+
 </html>
