setting Entity 이메일 인증 보류, 화면 코딩 마무리 후 controller 작업

--- a/src/main/resources/templates/auth/join.html
+++ b/src/main/resources/templates/auth/join.html
@@ -38,14 +38,14 @@
     <h3 class="text-center pt-5">회원가입</h3>
     <br>
     <form action="" method="POST">
-      <div class="w-100 py-2">
-        <label for="username">E-mail</label>
-        <input class="form-control" type="email" id="username" name="username">
-        <button class="btn btn-primary w-100 mt-1" onclick="sendEmail()">인증메일 발송</button>
-      </div>
+<!--      <div class="w-100 py-2">-->
+<!--        <label for="username">E-mail</label>-->
+<!--        <input class="form-control" type="email" id="username" name="username">-->
+<!--        <button class="btn btn-primary w-100 mt-1" onclick="sendEmail()">인증메일 발송</button>-->
+<!--      </div>-->
       <div class="w-100 py-2">
         <label for="username">Password</label>
-        <input class="form-control" type="password" id="password" name="password">
+        <input class="form-control" type="text" id="username" name="username">
       </div>
       <div class="w-100 py-2">
         <label>Password 확인</label>
@@ -72,9 +72,6 @@
     alert('로그인 페이지로');
   }
 
-  function sendEmail() {
-    alert("인증메일 발송");
-  }
 </script>
 </body>
 
