--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -15,8 +15,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
           integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
           crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="file:///C:/Users/kms/Desktop/giant_front/static/style.css">
-
+  <link rel="stylesheet" th:href="@{/style.css}">
 
   <!-- icon -->
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -37,17 +36,17 @@
     <br>
     <h3 class="text-center pt-5">로그인</h3>
     <br><br>
-    <form action="" method="POST">
+    <form th:action="@{/auth/login}" method="POST">
       <div class="w-100 py-2">
         <label for="username">ID</label>
-        <input class="form-control" type="email" id="username" name="username">
+        <input class="form-control" type="text" id="username" name="username">
       </div>
       <div class="w-100 py-2">
-        <label for="username">Password</label>
+        <label for="password">Password</label>
         <input class="form-control" type="password" id="password" name="password">
       </div>
       <div class="w-100 py-3">
-        <button type="submit" class="btn btn-primary w-100" onclick="login()">
+        <button type="submit" class="btn btn-primary w-100">
           <span>로그인</span>
         </button>
       </div>
@@ -59,11 +58,7 @@
   </div>
 </section>
 
-<script>
-  function login() {
-    alert('로그인');
-  }
-</script>
+
 </body>
 
 </html>
