--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -15,7 +15,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
           integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
           crossorigin="anonymous"></script>
-  <link rel="stylesheet" th:href="@{/style.css}">
+  <link rel="stylesheet" th:href="@{/css/style.css}">
 
   <!-- icon -->
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -53,7 +53,7 @@
     </form>
     <br>
     <span>아직 <b>GIANTS</b>의 회원이 아니신가요?</span>
-    <button class="btn btn-outline-primary w-100"><span>회원가입</span></button>
+    <a class="btn btn-outline-primary w-100" th:href="@{/auth/join}"><span>회원가입</span></a>
 
   </div>
 </section>
