--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -17,11 +17,9 @@
             crossorigin="anonymous"></script>
     <link rel="stylesheet" th:href="@{/css/style.css}">
 
-
     <!-- icon -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
           integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-
 
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -77,7 +75,7 @@
                         <div style="font-size: .5rem !important;">
 
                             <div class="d-flex justify-content-between align-items-center mb-2">
-                                <h4><b>인기글</b></h4>
+                                <h4><b clastt="text-primary">[한국큐빅]</b> 토론방</h4>
                                 <button type="button" class="btn btn-outline-primary p-1">
                                     <i class="fa fa-plus p-1 m-0"></i> <span>더보기</span></button>
                             </div>
