--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -6,14 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title th:text="${title}"></title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-            integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-            integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-            crossorigin="anonymous"></script>
+    <!-- bootstrap 5 -->
+    <link rel="stylesheet" th:href="@{/bs5/bootstrap-5.0.2-dist/css/bootstrap.css}">
+    <script th:src="@{/bs5/bootstrap-5.0.2-dist/js/bootstrap.js}"></script>
     <link rel="stylesheet" th:href="@{/css/style.css}">
 
     <!-- icon -->
@@ -40,15 +35,18 @@
         <button class="btn btn-primary bg-white border border-white text-dark">
             <i class="fa fa-heart"></i>
         </button>
-
-        <button class="btn btn-dark" th:href="@{/}">
+        <a class="btn btn-dark" th:href="@{/}">
             GIANTS
-        </button>
+        </a>
 
-        <button class="btn btn-primary bg-white border border-white text-dark" data-bs-toggle="modal"
-                data-bs-target="#exampleModal">
+<!--        <button class="btn btn-primary bg-white border border-white text-dark" data-bs-toggle="modal"-->
+<!--                data-bs-target="#exampleModal">-->
+<!--            <i class="fa fa-search"></i>-->
+<!--        </button>-->
+
+        <a class="btn btn-primary bg-white border border-white text-dark" th:href="@{/main/search}">
             <i class="fa fa-search"></i>
-        </button>
+        </a>
 
         <button class="btn btn-primary bg-white border border-white text-dark" data-bs-toggle="dropdown"
                 aria-expanded="false">
@@ -64,6 +62,8 @@
 
 <!-- SIDEBAR -->
 <div id="sidebar" th:fragment="sidebar(sidebar)">
+
+
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel"
          style="visibility: hidden;" aria-modal="true" role="dialog">
         <div class="offcanvas-header pb-0 pt-5">
@@ -120,13 +120,11 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form>
-                        <div class="mb-3">
-                            <input type="text" class="form-control" id="recipient-name">
-                        </div>
-                    </form>
+                    <div class="mb-3">
+                    </div>
+                    <button type="button" class="btn btn-dark d-none" th:onclick="|javascript:test()|">ddd</button>
 
-                    <table class="table" id="searched">
+                    <table class="table d-none">
                         <tr>
                             <td>한화에스비아이스팩</td>
                         </tr>
