부트스트랩 로컬 다운로드, 레이아웃 정리

--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:replace="layout/layout :: head('write')">
 </head>
+
 <body>
+<nav class="bg-dark" th:replace="layout/layout :: menu('write')">
+</nav>
+
+<section>
+    <div class="main col-lg-8 bg-white m-auto h-100 p-3">
+
+        <form th:action="@{/board/write}" th:method="POST">
+            <div class="py-4">
+                <label>제목</label>
+                <input type="text" class="form-control" name="title">
+            </div>
+            <div class="py-4">
+                <label>내용</label>
+                <textarea class="form-control" name="content" id="content" rows="10"></textarea>
+            </div>
+            <div class="py-4">
+                <button type="submit" class="btn btn-outline-success">저장</button>
+            </div>
+        </form>
+
+    </div>
+</section>
+
+<!-- SIDEBAR -->
+<div id="sidebar" th:replace="layout/layout :: sidebar('write')">
+</div>
+<!-- // SIDEBAR -->
 
 </body>
+
 </html>
