--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -44,7 +44,7 @@
 <!--            <i class="fa fa-search"></i>-->
 <!--        </button>-->
 
-        <a class="btn btn-primary bg-white border border-white text-dark" th:href="@{/main/search}">
+        <a class="btn btn-primary bg-white border border-white text-dark" th:href="@{/search}">
             <i class="fa fa-search"></i>
         </a>
 
