--- a/src/main/resources/templates/main/pick.html
+++ b/src/main/resources/templates/main/pick.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:replace="layout/layout :: head('main')">
 </head>
+
 <body>
+<nav class="bg-dark" th:replace="layout/layout :: menu('main')">
+</nav>
+
+<section>
+    <div class="main col-lg-8 bg-white m-auto h-100 p-3">
+    </div>
+</section>
+
+<!-- SIDEBAR -->
+<div id="sidebar" th:replace="layout/layout :: sidebar('main')">
+</div>
+<!-- // SIDEBAR -->
 
 </body>
+
 </html>
