게시글 작성 DTO 분리, 종목명/종목코드 DB 수집완료

--- a/src/main/resources/templates/auth/join.html
+++ b/src/main/resources/templates/auth/join.html
@@ -11,7 +11,7 @@
 
         <h3 class="text-center pt-5">회원가입</h3>
         <br>
-        <form th:action="@{/auth/join}" method="POST">
+        <form th:action="@{/auth/join}" th:method="POST">
             <!--      <div class="w-100 py-2">-->
             <!--        <label for="username">E-mail</label>-->
             <!--        <input class="form-control" type="email" id="username" name="username">-->
