--- a/src/main/resources/templates/main/stock.html
+++ b/src/main/resources/templates/main/stock.html
@@ -9,6 +9,9 @@
 
 <section>
     <div class="main col-lg-8 bg-white m-auto h-100 p-3">
+        <div th:text="${stock.stockName}">
+
+        </div>
     </div>
 </section>
 
