stock main, stock board 분리

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -7,6 +7,9 @@ body {
   padding: 0;
   margin: 0;
 }
+div::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
+}
 nav > div {
   height: 3rem;
 }
