--- a/src/main/resources/templates/main/search.html
+++ b/src/main/resources/templates/main/search.html
@@ -35,7 +35,7 @@
 
         <!-- 여기서부터 쪼개면 됨 -->
         <div class="row p-5">
-            <form th:action="@{/board/search}" th:method="GET">
+            <form th:action="@{/main/stock}" th:method="POST">
                 <div class="ui-widget d-flex">
 
                     <input type="text" name="stock" class="form-control" id="search_input">&nbsp;
