--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -9,11 +9,12 @@
 
 <section>
     <div class="main col-lg-8 bg-white m-auto h-100 p-3">
-
-        <form th:action="@{/board/write}" th:method="POST">
+        <div th:text="${stock}"></div>
+        <form th:action="@{/board/submit}" th:method="POST">
+            <input type="hidden" name="stockId" th:value="${stock}">
             <div class="py-4">
                 <label>제목</label>
-                <input type="text" class="form-control" name="title">
+                <input type="text" class="form-control" name="title" autocomplete="off">
             </div>
             <div class="py-4">
                 <label>내용</label>
