--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-
 <head th:replace="layout/layout :: head('main')">
 </head>
 
@@ -9,132 +8,48 @@
 </nav>
 
 <section>
-    <div class="main col-lg-8  bg-white m-auto h-100 p-3">
+    <div class="main col-lg-8 bg-white m-auto h-100 p-3 overflow-auto">
+        <!-- <div th:text="${stock}"> -->
+        <table class="table">
+            <colgroup>
+                <col width="20%">
+                <col width="50%">
+                <col width="30%">
+            </colgroup>
+            <thead class="text-center">
+            <tr>
+                <th>작성자</th>
+                <th>제목</th>
+                <!--                    <th>종목코드</th>-->
+                <th>작성일</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="board : ${boards}">
+                <td th:text="${board.user.username}"></td>
+                <td th:text="${board.content}"></td>
+                <!--                    <td th:text="${board.stockId}"></td>-->
+                <td th:text="${board.createdAt}"></td>
+            </tr>
+            </tbody>
+        </table>
 
-        <!-- 여기서부터 쪼개면 됨 -->
-        <div class="row p-0 m-0">
-
-            <div class="col-md-12 mb-2">
-                <div class="card">
-                    <div class="card-body">
-
-                        <!-- SERCTION 1 -->
-                        <div style="font-size: .5rem !important;">
-
-                            <div class="d-flex justify-content-between align-items-center mb-2">
-                                <h4><b clastt="text-primary">[한국큐빅]</b> 토론방</h4>
-                                <button type="button" class="btn btn-outline-primary p-1">
-                                    <i class="fa fa-plus p-1 m-0"></i> <span>더보기</span></button>
-                            </div>
-
-                            <table class="table">
-                                <thead>
-                                <tr>
-                                    <th>작성자</th>
-                                    <th>제목</th>
-                                    <th>작성일시</th>
-                                    <th>좋아요</th>
-                                    <th>댓글수</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                                </tbody>
-                            </table>
-
-                        </div>
-                        <!-- // SERCTION 1 -->
-
-                    </div>
-                </div>
+        <form th:action="@{/board/write}" th:method="GET">
+            <input type="hidden" name="stock" th:value="${stock}">
+            <div class="text-end">
+                <button type="submit" class="btn btn-outline-success">
+                    글 작성
+                </button>
             </div>
-
-        </div>
-
-        <!-- 여기서부터 쪼개면 됨 -->
-
+        </form>
     </div>
 </section>
-
-
 
 <!-- SIDEBAR -->
 <div id="sidebar" th:replace="layout/layout :: sidebar('main')">
 </div>
 <!-- // SIDEBAR -->
 
-<footer>
-
-</footer>
 </body>
 
 </html>
