GET방식으로 변경 (redirect 처리), detail 페이지 추가

--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -27,8 +27,9 @@
             <tbody>
             <tr th:each="board : ${boards}">
                 <td th:text="${board.user.username}"></td>
-                <td th:text="${board.content}"></td>
-                <!--                    <td th:text="${board.stockId}"></td>-->
+                <td>
+                    <a th:text="${board.content}" th:href="@{/board/detail(b=${board.boardId})}"></a>
+                </td>
                 <td th:text="${board.createdAt}"></td>
             </tr>
             </tbody>
