--- a/src/main/resources/templates/main/stock.html
+++ b/src/main/resources/templates/main/stock.html
@@ -47,7 +47,7 @@
 
                             <div class="d-flex justify-content-between align-items-center mb-2">
                                 <h4><b>토론실</b></h4>
-                                <form th:action="@{/board/stock}" th:method="POST">
+                                <form th:action="@{/board/list}" th:method="GET">
 <!--                                    <a type="button" class="btn btn-outline-primary p-1"-->
 <!--                                       th:href="@{/board/stock/(stockCode=${stock.stockCode})}">-->
 <!--                                        <i class="fa fa-plus p-1 m-0"></i> <span>더보기</span>-->
