--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -13,7 +13,7 @@ div::-webkit-scrollbar {
 nav > div {
   height: 3rem;
 }
-nav button, nav a {
+.nav button, .nav a {
   border-radius: 50% !important;
 }
 
@@ -21,6 +21,10 @@ nav button, nav a {
   top: 0;
   left: 0;
   width: 280px;
+}
+
+a {
+  text-decoration-line: none;
 }
 
 section {
