layout 수정, Like entity, service - board로 통합

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -13,7 +13,7 @@ div::-webkit-scrollbar {
 nav > div {
   height: 3rem;
 }
-.nav button, .nav a {
+.nav-circle button, .nav-circle a {
   border-radius: 50% !important;
 }
 
