--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -15,7 +15,7 @@
     <form th:action="@{/auth/login}" method="POST">
       <div class="w-100 py-2">
         <label for="username">ID</label>
-        <input class="form-control" type="text" id="username" name="username">
+        <input class="form-control" type="text" id="username" name="username" autocomplete="off">
       </div>
       <div class="w-100 py-2">
         <label for="password">Password</label>
