--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -24,7 +24,7 @@
 
 <body>
 
-<nav class="nav bg-dark" th:fragment="menu(menu)">
+<nav class="nav-circle bg-dark" th:fragment="menu(menu)">
     <div class="col-lg-8 m-auto text-center d-flex align-items-center justify-content-evenly">
 
         <button type="button" class="btn btn-primary bg-white border border-white text-dark" data-bs-toggle="offcanvas"
