상세페이지 UI 수정, 뎃글 삭제요청

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -41,3 +41,11 @@ section {
   max-height: 400px;
   overflow: hidden auto;
 }
+
+.comment-form {
+  border-bottom: 1px solid #f3f3f3;
+}
+
+.board-content{
+  min-height: 20rem !important;
+}
