--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -10,33 +10,33 @@
 <section>
     <div class="main col-lg-8 bg-white m-auto h-100 p-3 overflow-auto">
 
-        <!--        <div>-->
-        <!--            <a class="btn btn-outline-secondary" th:href="@{/board/list(stock=${stockId})}">-->
-        <!--                <i class="fa fa-arrow-left"></i>-->
-        <!--            </a>-->
-        <!--        </div>-->
+        <div>
+            <a class="btn btn-outline-secondary py-1 px-2" th:href="@{/board/list(stock=${stockId})}">
+                <i class="fa fa-arrow-left"></i> 돌아가기
+            </a>
+        </div>
 
-        <h3 class="text-center pt-5 pb-2 text-primary" th:text="${board.title}"></h3>
+        <h2 class="text-center pt-5 pb-2" th:text="${board.title}"></h2>
 
-        <div class="p-2">
-            <span th:text="${#strings.replace(board.createdAt, 'T', '-')}"></span> &nbsp;
-            <span class="text-primary" th:text="${board.user.username}"></span>
+        <div class="p-2 d-flex justify-content-between">
+            <h5 class="text-primary" th:text="${board.user.username}"></h5>
+            <h5 th:text="${#strings.replace(board.createdAt, 'T', '-')}"></h5>
         </div>
         <br>
         <div class="card">
-            <div class="card-body overflow-auto" style="min-height: 400px !important;">
+            <div class="board-content card-body overflow-auto">
                 <span th:text="${board.content}"></span>
             </div>
         </div>
 
-        <div class="p-2 d-flex justify-content-between">
+        <div class="p-2 d-flex justify-content-between align-items-end">
 
             <a th:href="@{/board/like(s=${stockId}, b=${board.boardId})}">
-                <h4>
+                <h5>
                     <span class="text-dark">좋아요</span>
                     <i th:if="${isLiked.equals(true)}" class="fas fa-heart text-danger"></i>
                     <i th:if="${isLiked.equals(false)}" class="far fa-heart text-secondary"></i>
-                </h4>
+                </h5>
             </a>
 
             <div th:if="${board.user.username} == ${user}">
@@ -45,49 +45,68 @@
                     <input type="hidden" name="stockId" th:value="${stockId}">
                     <input type="hidden" name="boardId" th:value="${board.boardId}">
 
-                    <button type="submit" class="btn btn-secondary p-2">
+                    <button type="submit" class="btn btn-outline-secondary p-2">
                         <i class="fa fa-trash"></i> 삭제
                     </button>
                 </form>
             </div>
         </div>
-        <div class="p-4" style="border-top: 1px solid #f3f3f3; border-bottom: 1px solid #f3f3f3;">
-            <span class="text-secondary">10개의 댓글</span>
-            <span th:text="${user}"></span>
-        </div>
+
         <div class="mt-5 p-2">
 
-            <!-- comment form -->
             <div class="p-2">
-                <form th:action="@{/comment/create/{boardId}(boardId = ${board.boardId})}" th:method="POST">
+                <span classt="pb-1">댓글 작성</span>
+                <form th:action="@{/comment/create/{boardId}(boardId = ${board.boardId})}" th:method="POST" th:object="*{board.comments}">
                     <textarea class="form-control" name="content" row="4"></textarea>
-<!--                    <input type="hidden" name="board" th:value="${board}">-->
-                    <div class="text-end">
-                        <button type="submit" class="btn btn-outline-primary p-2">작성</button>
+
+                    <!-- -->
+<!--                    <input type="text" class="form-control" id="content"th:classappend="${#fields.hasErrors('content')} ? 'is-invalid'" th:field="*{}">-->
+<!--                    <div class="invalid-feedback" th:if="${#fields.hasErrors('content')}" th:errors="*{}">제목 에러 메시지-->
+<!--                    </div>-->
+                    <!-- -->
+
+                    <div class="text-end py-2">
+                        <button type="submit" class="btn btn-outline-success py-1 px-2"><span>저장</span></button>
                     </div>
                 </form>
             </div>
-            <!-- comment form -->
 
-            <!-- comment list -->
-            <div class="p-2" style="border-bottom: 1px solid #f3f3f3;" th:each="comment : ${board.comments}">
-                <h4 th:text="${comment.user.username}"></h4>
-                <h6 class="text-secondary" th:text="${comment.createdAt}" }></h6>
-                <div class="pt-2">
+            <div class="comment-form p-3">
+                <span class="text-secondary" th:text="${countComment}"></span>
+                <span>개의 댓글</span>
+            </div>
+
+            <div class="comment-form p-2" th:each="comment : ${board.comments}">
+                <div class="d-flex justify-content-between">
+                    <h5 class="text-primary" th:text="${comment.user.username}"></h5>
+                    <span class="text-secondary" th:text="${#strings.replace(comment.createdAt, 'T', '-')}"></span>
+                </div>
+
+                <div class="p-2">
                     <span th:text="${comment.content}"></span>
                 </div>
+
+                <div class="text-end" th:if="${comment.user.username} == ${user}">
+                    <button type="button" class="btn btn-outline-dark p-1 border border-0" th:onclick="delComment([[${stockId}]], [[${board.boardId}]], [[${comment.commentId}]])">
+                        <span><small>삭제</small></span>
+                    </button>
+                </div>
             </div>
-            <!-- comment list -->
 
         </div>
 
     </div>
 </section>
 
+
 <!-- SIDEBAR -->
 <div id="sidebar" th:replace="layout/layout :: sidebar('detail')">
 </div>
 <!-- // SIDEBAR -->
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script th:src="@{/js/common.js}"></script>
+
 
 </body>
 
