--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -8,8 +8,10 @@
 
     <!-- bootstrap 5 -->
     <link rel="stylesheet" th:href="@{/bs5/bootstrap-5.0.2-dist/css/bootstrap.css}">
-    <script th:src="@{/bs5/bootstrap-5.0.2-dist/js/bootstrap.js}"></script>
+    <script th:src="@{/bs5/bootstrap-5.0.2-dist/js/bootstrap.bundle.js}"></script>
+
     <link rel="stylesheet" th:href="@{/css/style.css}">
+
 
     <!-- icon -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -24,38 +26,34 @@
 
 <body>
 
-<nav class="nav-circle bg-dark" th:fragment="menu(menu)">
+<nav class="bg-dark" th:fragment="menu(menu)">
     <div class="col-lg-8 m-auto text-center d-flex align-items-center justify-content-evenly">
 
-        <button type="button" class="btn btn-primary bg-white border border-white text-dark" data-bs-toggle="offcanvas"
+        <a type="button" class="btn btn-primary rounded-circle bg-white border border-white text-dark" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
             <i class="fa fa-list"></i>
-        </button>
+        </a>
 
-        <button class="btn btn-primary bg-white border border-white text-dark">
+        <a class="btn btn-primary rounded-circle bg-white border border-white text-dark">
             <i class="fa fa-heart"></i>
-        </button>
+        </a>
+
         <a class="btn btn-dark" th:href="@{/}">
             GIANTS
         </a>
 
-<!--        <button class="btn btn-primary bg-white border border-white text-dark" data-bs-toggle="modal"-->
-<!--                data-bs-target="#exampleModal">-->
-<!--            <i class="fa fa-search"></i>-->
-<!--        </button>-->
-
-        <a class="btn btn-primary bg-white border border-white text-dark" th:href="@{/search}">
+        <a class="btn btn-primary rounded-circle bg-white border border-white text-dark" th:href="@{/search}">
             <i class="fa fa-search"></i>
         </a>
 
-        <button class="btn btn-primary bg-white border border-white text-dark" data-bs-toggle="dropdown"
+        <a class="btn btn-primary rounded-circle bg-white border border-white text-dark" data-bs-toggle="dropdown"
                 aria-expanded="false">
             <i class="fa fa-user"></i>
-        </button>
-        <ul class="dropdown-menu">
-            <li><a class="dropdown-item" th:href="@{/user/mypage}">마이페이지</a></li>
-            <hr class="dropdown-divider">
-            <li><a class="dropdown-item" th:href="@{/logout}">로그아웃</a></li>
+        </a>
+        <ul class="dropdown-menu p-0">
+            <li><a class="dropdown-item p-2" th:href="@{/user/mypage}">마이페이지</a></li>
+            <hr class="dropdown-divider m-0">
+            <li><a class="dropdown-item p-2" th:href="@{/logout}">로그아웃</a></li>
         </ul>
     </div>
 </nav>
